# Species

./: .gitignore  Map.hs  README.md  SpeciesTypes.hs  ideas.txt  species.sty
agda/: AgdaEnd.agda  Defragment.agda  GCBP.agda  InverseLemmas.agda  Monoidal.agda  Rebuild.agda  Rebuild2.agda  SmallSets.agda  Species.agda  SpeciesAxiomatic.agda
agda-old/: FinSet.agda  InverseSetoid.agda  Inverses.agda  Permutations.agda  Pigeonhole.agda  Species.agda  agda-commands.txt
agda-old/old/: SizedSpecies.agda  Species-deBruijn.agda  Species-old.agda  Species.agda
agda/categories/: Coend.agda
agda/equality/: Category.agda  FunctorCat.agda
haskell/: ArithIsos.hs  BFunctor.hs  Bag.hs  Equality.hs  Fin.hs  FinIsos.hs  FinPf.agda  FinPf.idr  Finite.hs  HVec.hs  Iso.hs  LICENSE  Map.hs  Matrix.hs  Nat.hs  Proxy.hs  Set.hs  Shuffle.hs  SpeciesIsos.hs  SpeciesTypes.hs  TMap.hs  Traversal.hs  Unlabelled.hs  Util.hs  Vec.hs  VecLike.hs  Zippy.hs  species-types.cabal
haskell/proofs/: FinPf.agda
haskell/src/Data/: BFunctor.hs  Fin.hs  Finite.hs  Iso.hs  Storage.hs  Subset.hs  Vec.hs
haskell/src/Data/Fin/: Isos.hs
haskell/src/Data/Set/: Abstract.hs
haskell/src/Data/Species/: Array.hs  Convert.hs  Cursor.hs  Elim.hs  Examples.hs  Isos.hs  Lens.hs  List.hs  Matrix.hs  Rose.hs  Shape.hs  Shuffle.hs  Traversal.hs  Types.hs  Unlabelled.hs  VecLike.hs  Zippy.hs
haskell/src/Data/Type/: Isos.hs  List.hs  Nat.hs
haskell/src/Data/Type/Nat/: Div.hs  Inequality.hs  Minus.hs
papers/: LabelledArrays.lhs  MFPS.bib  MFPS.lhs  MFPS14-feedback.txt  Makefile  POPL15.tex  README  Shake.hs  SpeciesAsConstructors.bib  SpeciesAsConstructors.lhs  SpeciesAsConstructors.tex  SpeciesDiagrams.hs  brainstorm.txt  prentcsmacro.sty  todo.org
papers/MemoryModels/: Makefile  MemDiagrams.hs  format.sed  install-diagrams.sh  mem.tex  models.lagda  references.bib  stack.yaml
papers/POPL15Submission/: LabelledArrays.lhs  MFPS.bib  MFPS.lhs  POPL15.tex  SpeciesAsConstructors.lhs  todo.org
