name:                species-types
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey and Jacques Carette
maintainer:          byorgey@cis.upenn.edu
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.BFunctor,
                       Data.Iso,
                       Data.Fin,
                       Data.Fin.Isos,
                       Data.Finite,
                       Data.Set.Abstract,
                       -- Data.Species.Array,
                       Data.Species.Convert,
                       Data.Species.Elim,
                       Data.Species.Examples,
                       Data.Species.Isos,
                       Data.Species.Lens,
                       Data.Species.List,
                       Data.Species.Rose,
                       Data.Species.Shape,
                       Data.Species.Shuffle,
                       Data.Species.Traversal,
                       Data.Species.Types,
                       -- Data.Species.Unlabelled,
                       Data.Species.VecLike,
                       Data.Species.Zippy,
                       Data.Type.Isos,
                       Data.Type.List,
                       Data.Type.Nat,
                       Data.Type.Nat.Div,
                       Data.Type.Nat.Inequality,
                       Data.Type.Nat.Minus,
                       Data.Vec
  -- other-modules:
  build-depends:       base >= 4.7 && < 4.9,
                       lens >= 3.9 && < 4.8,
                       tagged >= 0.6 && < 0.8,
                       void >= 0.6 && < 0.8,
                       mtl >= 2.1 && < 2.3,
                       adjunctions >= 4.2 && < 4.3,
                       keys >= 3.0 && < 4.3,
                       monad-supply >= 0.4 && < 0.7,
                       transformers >= 0.3 && < 0.5,
                       comonad >= 4.0,
                       containers >= 0.4 && < 0.6,
                       multiset >= 0.2 && < 1.0,
                       unordered-containers >= 0.2.2,
                       hashable >= 1.1
  hs-source-dirs:      src
